# iz_cpp

./: Makefile  README.md
.github/workflows/: ci.yml
linters/: run.sh
untitled/: CMakeLists.txt  main.c
untitled/start/: CMakeLists.txt  CmakeLists.txt  initData.txt  stakeholder.c  stakeholder.h  test.txt
untitled/tests/: CMakeLists.txt  CmakeLists.txt  initData.txt  test.txt  test_stake.cpp
